@startuml


class "Map" as Map {

}

class "Intersection" as Intersection {
lat: Double
long: Double
}

class "Segment" as Segment {
destination: Intersection
origin: Intersection
length: double
name: String
}

class "Tour" as Tour {

}

class "Courier" as Courier {

}
class "Itinerary" as Itinerary {
}

class "Request" as Request {
time window: pair<TimeStamp,TimeStamp>
delivery time: TimeStamp
}


Map "1" -- "0...*" Intersection : composed by
Map "1" -- "0...*" Segment : composed by
Segment "1...*"-- "0...*" Itinerary : composed by
Intersection "1...*"--"2" Segment : composed by
Request "0" -- "1" Intersection : contains
Tour "1"--"1...*" Itinerary : composed by
Courier "0...1"--"0...*" Request : has
Tour "0...1"--"1...*" Request : resolve
Courier "1"--"0...1" Tour : has
@enduml
